@@ -1,3 +1,8 @@
+2019-05-09  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (cleanup_list): New function.
+	(main): Call cleanup_list for dump_data_sections and string_sections.
+
 2019-04-28  Mark Wielaard  <mark@klomp.org>
 
 	* unstrip.c (add_new_section_symbols): Call ELF_CHECK after
